--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,13 @@ dependencies:
   googleapis_auth: ^1.3.1
   carousel_slider: ^4.2.1
   provider:
+  dependencies:
+  flutter_webview_plugin:
+    git: https://github.com/nuc134r/flutter_webview_plugin.git
+  cached_network_image: ^3.2.3
+  flutter_neumorphic: ^3.2.0
+  intl: ^0.18.0
+  google_fonts: ^4.0.3
 
 dev_dependencies:
   flutter_test:
@@ -57,7 +64,8 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
+  assets:
+    - assets/icon/
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
